syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service ChannelCreateService {
  rpc Exec(ChannelCreateRequest) returns (ChannelCreateResponse) {}
}

service ChannelRetrieveService {
  rpc Exec(ChannelRetrieveRequest) returns (ChannelRetrieveResponse) {}
}

service ChannelDeleteService {
  rpc Exec(ChannelDeleteRequest) returns (google.protobuf.Empty) {}
}

message ChannelDeleteRequest {
  repeated uint32 keys = 1;
  repeated string names = 2;
  bool allow_internal = 3;
}

message Channel {
  uint32 key = 1;
  string name = 2;
  uint32 leaseholder = 3;
  string data_type = 4;
  int64 density = 5;
  bool is_index = 6;
  uint32 index = 7;
  bool is_virtual = 8;
  bool internal = 9;
}

message ChannelRetrieveRequest {
  uint32 node_key = 1;
  repeated uint32 keys = 2;
  repeated string names = 3;
  string search = 4;
}

message ChannelRetrieveResponse {
  repeated Channel channels = 1;
}

message ChannelCreateRequest {
  repeated Channel channels = 1;
  bool retrieve_if_name_exists = 2;
}

message ChannelCreateResponse {
  repeated Channel channels = 1;
}
